Actualización de clases

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 NotEmpty=El campo es obligatorio
 NotEmpty.tipoCliente.codigo=El código cliente es obligatorio
 tipocliente.codigo.duplicado=Código duplicado
+cliente.nif.duplicado=Nif Duplicado
+bono.id.duplicado = El código del bono ya existe
