--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ NotEmpty.tipoCliente.codigo=El código cliente es obligatorio
 tipocliente.codigo.duplicado=Código duplicado
 cliente.nif.duplicado=Nif Duplicado
 bono.id.duplicado = El código del bono ya existe
+lampara.no.existe = La lámpara indicada no existe!!
+lampara.en.uso = La lámpara ya esté en uso!!
